--- a/.env.test
+++ b/.env.test
@@ -1,3 +1,7 @@
 # define your env variables for the test env here
+
+APP_ENV=test
 KERNEL_CLASS='App\Kernel'
 APP_SECRET='$ecretf0rt3st'
+APP_BASE_DOMAIN=r507.iut-nevers.fr
+DATABASE_URL="mysql://tp1-ChaineProd:tp1-ChaineProd@127.0.0.1:3306/tp1-ChaineProd"
