--- a/.github/workflows/symfony.yml
+++ b/.github/workflows/symfony.yml
@@ -7,7 +7,7 @@ name: Symfony
 
 on:
   push:
-    branches: [ "master", "develop" ]
+    branches: [ "master", "develop", "TestCI" ]
   pull_request:
     branches: [ "master" ]
 
