--- a/.github/workflows/symfony.yml
+++ b/.github/workflows/symfony.yml
@@ -25,8 +25,8 @@ jobs:
       with:
         php-version: '8.4'
     - uses: actions/checkout@v4
-    #- name: Copy .env.test.local
-    #  run: php -r "file_exists('.env.test.local') || copy('.env.test', '.env.test.local');"
+    - name: Copy .env.test.local
+     run: php -r "file_exists('.env.test.local') || copy('.env.test', '.env.test.local');"
     - name: Cache Composer packages
       id: composer-cache
       uses: actions/cache@v3
@@ -45,3 +45,6 @@ jobs:
       env:
         DATABASE_URL: sqlite:///%kernel.project_dir%/data/database.sqlite
       run: vendor/bin/phpunit
+
+
+  
