--- a/.github/workflows/symfony.yml
+++ b/.github/workflows/symfony.yml
@@ -45,6 +45,25 @@ jobs:
       env:
         DATABASE_URL: sqlite:///%kernel.project_dir%/data/database.sqlite
       run: vendor/bin/phpunit
+  
+  deploy:
+    needs: symfony-tests
+    runs-on: ubuntu-latest
+    
+    steps:
+      - uses: actions/checkout@v3
+      - name: Deploy test
+        uses: appleboy/ssh-action@v0.1.5
+        with:
+          host: ${{secrets.FTP_HOST}}
+          username: ${{secrets.FTP_USER}}
+          password: ${{secrets.FTP_PWD}}
+          script: |
+            cd /var/www/myapp
+            git pull origin main
+            composer install --no-dev
+            php bin/console cache:clear
+
 
 
   
