--- a/.github/workflows/symfony.yml
+++ b/.github/workflows/symfony.yml
@@ -53,7 +53,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Deploy test
-        uses: appleboy/ssh-action@v0.1.5
+        uses: SamKirkland/FTP-Deploy-Action@v4.3.4
         with:
           host: ${{secrets.FTP_HOST}}
           username: ${{secrets.FTP_USER}}
