--- a/.github/workflows/symfony.yml
+++ b/.github/workflows/symfony.yml
@@ -58,6 +58,8 @@ jobs:
           host: ${{secrets.FTP_HOST}}
           username: ${{secrets.FTP_USER}}
           password: ${{secrets.FTP_PWD}}
+          protocol: ftp 
+          server-dir: /var/www/myapp/
           script: |
             cd /var/www/myapp
             git pull origin main
